; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_mwindow.c_git_mwindow_put_pack.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_mwindow.c_git_mwindow_put_pack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.git_pack_file = type { i32, i32 }

@git__mwindow_mutex = common dso_local global i32 0, align 4
@git__pack_cache = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_mwindow_put_pack(%struct.git_pack_file* %0) #0 {
  %2 = alloca %struct.git_pack_file*, align 8
  %3 = alloca i32, align 4
  store %struct.git_pack_file* %0, %struct.git_pack_file** %2, align 8
  %4 = call i64 @git_mutex_lock(i32* @git__mwindow_mutex)
  %5 = icmp slt i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %31

7:                                                ; preds = %1
  %8 = load i32, i32* @git__pack_cache, align 4
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* @git__pack_cache, align 4
  %11 = load %struct.git_pack_file*, %struct.git_pack_file** %2, align 8
  %12 = getelementptr inbounds %struct.git_pack_file, %struct.git_pack_file* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @git_strmap_exists(i32 %10, i32 %13)
  %15 = call i32 @assert(i32 %14)
  %16 = load %struct.git_pack_file*, %struct.git_pack_file** %2, align 8
  %17 = getelementptr inbounds %struct.git_pack_file, %struct.git_pack_file* %16, i32 0, i32 1
  %18 = call i32 @git_atomic_dec(i32* %17)
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %7
  %22 = load i32, i32* @git__pack_cache, align 4
  %23 = load %struct.git_pack_file*, %struct.git_pack_file** %2, align 8
  %24 = getelementptr inbounds %struct.git_pack_file, %struct.git_pack_file* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @git_strmap_delete(i32 %22, i32 %25)
  %27 = load %struct.git_pack_file*, %struct.git_pack_file** %2, align 8
  %28 = call i32 @git_packfile_free(%struct.git_pack_file* %27)
  br label %29

29:                                               ; preds = %21, %7
  %30 = call i32 @git_mutex_unlock(i32* @git__mwindow_mutex)
  br label %31

31:                                               ; preds = %29, %6
  ret void
}

declare dso_local i64 @git_mutex_lock(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @git_strmap_exists(i32, i32) #1

declare dso_local i32 @git_atomic_dec(i32*) #1

declare dso_local i32 @git_strmap_delete(i32, i32) #1

declare dso_local i32 @git_packfile_free(%struct.git_pack_file*) #1

declare dso_local i32 @git_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
